--- a/index.html
+++ b/index.html
@@ -16,55 +16,11 @@
     <script>
 
       $(document).ready(function(){
-        var $body = $('body');
-        $body.html('');
-
-        $body.prepend('<div class="title">\
-            <h1>Welcome to Twittler!</h1>\
-            <p class="page_status">(initial page)</p>\
-            <button class="refresh">Click to refresh</button>\
-        </div>');
-
-        $body.append('<div class="tweets">\
-          <div>');
-
+        //var $body = $('body');
         $body = $('body').find('.tweets');
 
-        //Copies the undisplayed part of the streams data structure
-        var getNewStreams = function(newStreams, streams, differenceInLengths) {
-          var currentHomeLength = streams.home.length;
-          var previousHomeLength = currentHomeLength - differenceInLengths;
-
-          newStreams.home = streams.home.slice(previousHomeLength, currentHomeLength);
-          for (var user in streams.users) {
-            //gets all of the tweets for a given user
-            newStreams.users[user] = streams.users[user].slice();
-          }
-        };
-
-        var showNewStreams = function(showStreams) {
-          var streamsLength = 0;
-
-          //input global stream variable
-          //output a call to getTweets that only displays new tweets
-          //procedure looks at the difference in length between the new streams and
-            //old streams and only passes those tweets in that range to get tweets
-            //still gets every user and their tweets
-          return function() {
-            var newStreams = {};
-            newStreams.home = [];
-            newStreams.users = {};
-            var differenceInLengths = streams.home.length - streamsLength;
-
-            if (differenceInLengths > 0) {
-              streamsLength = streams.home.length;
-              getNewStreams(newStreams, streams, differenceInLengths);
-              showStreams(newStreams);
-            }
-          }
-        };
-
-        var getTweets = function(streams) {
+        var getTweets = function() {
+          $body.html('');
           var index = streams.home.length - 1;
 
           while(index >= 0){
@@ -72,21 +28,18 @@
             var $tweet = $('<div></div>');
 
             $tweet.text('@' + tweet.user + ': ' + tweet.message);
-            //changed appendTo to prependTo
-            $tweet.prependTo($body);
+            $tweet.appendTo($body);
             index -= 1;
           }
         };
 
-        var getNewTweets = showNewStreams(getTweets);
-
-        getNewTweets();
+        getTweets();
 
         $('.title').on('click', '.refresh', function() {
           //alert('clicked!');
           $(this).closest('body').find('.page_status')
             .text('(refreshed)');
-          getNewTweets();
+          getTweets();
         });
       });
     </script>
